--- a/MoYuAdBlock.conf
+++ b/MoYuAdBlock.conf
@@ -1,7 +1,7 @@
 # Stash 覆写规则 - 墨鱼去开屏 V2.0
-# 适用于 Stash 2.8.0 及以上版本
+# 适配 Stash 2.8.0+ 版本
 
-# 全局拦截配置
+# 全局 HTTPS 解密配置（需先在 Stash 开启 HTTPS 解密）
 [mitm]
 *.12306.cn
 *.alibaba.com
@@ -33,15 +33,7 @@
 # 通用广告拦截
 ^https?:\/\/(ad|api|static)\.([a-z0-9-]+\.)*(alibaba|taobao|meituan|douban|bilibili|tiktok|instagram|facebook|twitter|youtube|reddit|netflix|amazon|google|apple)\.com\/.*$ url reject
 
-# 特定应用广告拦截
-^https?:\/\/api\.douban\.com\/v2\/app_ads\/splash url reject
-^https?:\/\/api\.douban\.com\/b.*\/common_ads\?.* url reject
-^https?:\/\/gateway\.36kr\.com\/api\/adx\/ad\/show url reject
-^https?:\/\/evs\.500\.com\/esinfo\/loading\/loading url reject
-^https?:\/\/beijing-gateway-customer\.app-prod\.bjev\.com\.cn\/.*\/openScreenAdvert url reject
-^https?:\/\/ad\.12306\.cn\/ad\/ser\/getAdList url script-analyze-echo-response https://raw.githubusercontent.com/ddgksf2013/Scripts/refs/heads/master/12306.js
-
-# 应用启动页拦截
+# 特定应用启动页拦截
 ^https?:\/\/(m\.creditcard\.ecitic\.com|app\.58\.com|www\.123pan\.com|open\.78dm\.net|sdk\.alibaba\.com|apps\.api\.ke\.com|api\.sso\.ifanr\.com|api-new\.app\.acfun\.cn|gw\.aihuishou\.com)\/.*$ url reject
 
 # 视频平台广告
@@ -66,9 +58,9 @@
 ^https?:\/\/(www\.icbc.com.cn|www\.abc.com.cn|www\.cmbchina.com|www\.ccb.com)\/.*$ response-body replace (\{"ad_banner".*?\}) ""g
 
 # 规则说明
-# 1. 本规则集基于墨鱼去开屏 V2.0 脚本核心逻辑重构
-# 2. 使用前请确保已启用 Stash 的 HTTPS 解密功能
-# 3. 建议配合 AdGuard Home 或 DNS66 使用增强效果
+# 1. 本规则集基于墨鱼去开屏 V2.0 核心逻辑重构
+# 2. 使用前需在 Stash 启用 HTTPS 解密功能
+# 3. 建议配合 AdGuard Home 或 DNS66 增强效果
 # 4. 每周三晚 20:00 自动更新规则库
 # 5. 如遇拦截失效请检查证书安装状态
 # 6. 特殊应用需手动添加 Hosts 屏蔽（见附录）
